// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tests AddWords Renders correctly: from Parent 1`] = `
Array [
  <div
    className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true"
  >
    <ul
      className="MuiGridList-root"
      style={
        Object {
          "margin": -0,
          "width": 250,
        }
      }
    >
      <li
        className="MuiGridListTile-root"
        style={
          Object {
            "height": 50,
            "padding": 0,
            "width": "20%",
          }
        }
      >
        <div
          className="MuiGridListTile-tile"
        >
          <button
            className="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary"
            disabled={false}
            id="1.0"
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            style={
              Object {
                "height": "90%",
                "left": 0,
                "margin": "5%",
                "top": 0,
                "width": "90%",
              }
            }
            tabIndex={0}
            type="button"
          >
            <span
              className="MuiButton-label"
            >
              <div>
                <h5
                  className="MuiTypography-root MuiTypography-h5"
                >
                  kid
                </h5>
                <h6
                  className="MuiTypography-root MuiTypography-h6"
                >
                  1.0
                </h6>
              </div>
            </span>
            <span
              className="MuiTouchRipple-root"
            />
          </button>
        </div>
      </li>
      <li
        className="MuiGridListTile-root"
        style={
          Object {
            "height": 50,
            "padding": 0,
            "width": "20%",
          }
        }
      >
        <div
          className="MuiGridListTile-tile"
        />
      </li>
      <li
        className="MuiGridListTile-root"
        style={
          Object {
            "height": 50,
            "padding": 0,
            "width": "20%",
          }
        }
      >
        <div
          className="MuiGridListTile-tile"
        >
          <button
            className="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary"
            disabled={false}
            id="1.1"
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            style={
              Object {
                "height": "90%",
                "left": 0,
                "margin": "5%",
                "top": 0,
                "width": "90%",
              }
            }
            tabIndex={0}
            type="button"
          >
            <span
              className="MuiButton-label"
            >
              <div>
                <h5
                  className="MuiTypography-root MuiTypography-h5"
                >
                  kid
                </h5>
                <h6
                  className="MuiTypography-root MuiTypography-h6"
                >
                  1.1
                </h6>
              </div>
            </span>
            <span
              className="MuiTouchRipple-root"
            />
          </button>
        </div>
      </li>
      <li
        className="MuiGridListTile-root"
        style={
          Object {
            "height": 50,
            "padding": 0,
            "width": "20%",
          }
        }
      >
        <div
          className="MuiGridListTile-tile"
        />
      </li>
      <li
        className="MuiGridListTile-root"
        style={
          Object {
            "height": 50,
            "padding": 0,
            "width": "20%",
          }
        }
      >
        <div
          className="MuiGridListTile-tile"
        >
          <button
            className="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary"
            disabled={false}
            id="1.2"
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            style={
              Object {
                "height": "90%",
                "left": 0,
                "margin": "5%",
                "top": 0,
                "width": "90%",
              }
            }
            tabIndex={0}
            type="button"
          >
            <span
              className="MuiButton-label"
            >
              <div>
                <h5
                  className="MuiTypography-root MuiTypography-h5"
                >
                  kid
                </h5>
                <h6
                  className="MuiTypography-root MuiTypography-h6"
                >
                  1.2
                </h6>
              </div>
            </span>
            <span
              className="MuiTouchRipple-root"
            />
          </button>
        </div>
      </li>
      <li
        className="MuiGridListTile-root"
        style={
          Object {
            "height": 50,
            "padding": 0,
            "width": "20%",
          }
        }
      >
        <div
          className="MuiGridListTile-tile"
        >
          <img
            alt="leftEndcap.svg"
            height="100%"
            src="leftEndcap.svg"
            width={50}
          />
        </div>
      </li>
      <li
        className="MuiGridListTile-root"
        style={
          Object {
            "height": 50,
            "padding": 0,
            "width": "20%",
          }
        }
      >
        <div
          className="MuiGridListTile-tile"
        >
          <img
            alt="span.svg"
            height="100%"
            src="span.svg"
            width={50}
          />
        </div>
      </li>
      <li
        className="MuiGridListTile-root"
        style={
          Object {
            "height": 50,
            "padding": 0,
            "width": "20%",
          }
        }
      >
        <div
          className="MuiGridListTile-tile"
        >
          <img
            alt="intersect.svg"
            height="100%"
            src="intersect.svg"
            width={50}
          />
        </div>
      </li>
      <li
        className="MuiGridListTile-root"
        style={
          Object {
            "height": 50,
            "padding": 0,
            "width": "20%",
          }
        }
      >
        <div
          className="MuiGridListTile-tile"
        >
          <img
            alt="span.svg"
            height="100%"
            src="span.svg"
            width={50}
          />
        </div>
      </li>
      <li
        className="MuiGridListTile-root"
        style={
          Object {
            "height": 50,
            "padding": 0,
            "width": "20%",
          }
        }
      >
        <div
          className="MuiGridListTile-tile"
        >
          <img
            alt="rightEndcap.svg"
            height="100%"
            src="rightEndcap.svg"
            width={50}
          />
        </div>
      </li>
    </ul>
  </div>,
  <div
    style={
      Object {
        "marginLeft": 100,
      }
    }
  >
    <div
      className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true"
      style={
        Object {
          "width": 50,
        }
      }
    >
      <button
        className="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary Mui-disabled Mui-disabled"
        disabled={true}
        id="1"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        style={
          Object {
            "height": "90%",
            "left": 0,
            "margin": "5%",
            "top": 0,
            "width": "90%",
          }
        }
        tabIndex={-1}
        type="button"
      >
        <span
          className="MuiButton-label"
        >
          <div>
            <h5
              className="MuiTypography-root MuiTypography-h5"
            >
              parent
            </h5>
            <h6
              className="MuiTypography-root MuiTypography-h6"
            >
              1
            </h6>
          </div>
        </span>
      </button>
    </div>
    <div
      className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true"
      style={
        Object {
          "width": 50,
        }
      }
    />
  </div>,
]
`;

exports[`Tests AddWords Renders correctly: node w/ 1 subdomains 1`] = `
Array [
  <div
    className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true"
  >
    <ul
      className="MuiGridList-root"
      style={
        Object {
          "margin": -0,
          "width": 50,
        }
      }
    >
      <li
        className="MuiGridListTile-root"
        style={
          Object {
            "height": 50,
            "padding": 0,
            "width": "100%",
          }
        }
      >
        <div
          className="MuiGridListTile-tile"
        >
          <button
            className="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary"
            disabled={false}
            id="1.2.1"
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            style={
              Object {
                "height": "90%",
                "left": 0,
                "margin": "5%",
                "top": 0,
                "width": "90%",
              }
            }
            tabIndex={0}
            type="button"
          >
            <span
              className="MuiButton-label"
            >
              <div>
                <h5
                  className="MuiTypography-root MuiTypography-h5"
                >
                  oddData
                </h5>
                <h6
                  className="MuiTypography-root MuiTypography-h6"
                >
                  1.2.1
                </h6>
              </div>
            </span>
            <span
              className="MuiTouchRipple-root"
            />
          </button>
        </div>
      </li>
      <li
        className="MuiGridListTile-root"
        style={
          Object {
            "height": 50,
            "padding": 0,
            "width": "100%",
          }
        }
      >
        <div
          className="MuiGridListTile-tile"
        >
          <img
            alt="pillar.svg"
            height="100%"
            src="pillar.svg"
            width={50}
          />
        </div>
      </li>
    </ul>
  </div>,
  <div
    style={
      Object {
        "marginLeft": 0,
      }
    }
  >
    <div
      className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true"
      style={
        Object {
          "width": 50,
        }
      }
    >
      <button
        className="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary"
        disabled={false}
        id="1.2"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        style={
          Object {
            "height": "90%",
            "left": 0,
            "margin": "5%",
            "top": 0,
            "width": "90%",
          }
        }
        tabIndex={0}
        type="button"
      >
        <span
          className="MuiButton-label"
        >
          <div>
            <h5
              className="MuiTypography-root MuiTypography-h5"
            >
              kid
            </h5>
            <h6
              className="MuiTypography-root MuiTypography-h6"
            >
              1.2
            </h6>
          </div>
        </span>
        <span
          className="MuiTouchRipple-root"
        />
      </button>
    </div>
    <div
      className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true"
      style={
        Object {
          "width": 50,
        }
      }
    >
      <ul
        className="MuiGridList-root"
        style={
          Object {
            "margin": -2,
          }
        }
      >
        <li
          className="MuiGridListTile-root"
          style={
            Object {
              "height": 184,
              "padding": 2,
              "width": "100%",
            }
          }
        >
          <div
            className="MuiGridListTile-tile"
          >
            <img
              alt="pillar.svg"
              height="100%"
              src="pillar.svg"
              width={50}
            />
          </div>
        </li>
        <li
          className="MuiGridListTile-root"
          style={
            Object {
              "height": 184,
              "padding": 2,
              "width": "100%",
            }
          }
        >
          <div
            className="MuiGridListTile-tile"
          >
            <button
              className="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary"
              disabled={false}
              id="1"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              style={
                Object {
                  "height": "90%",
                  "left": 0,
                  "margin": "5%",
                  "top": 0,
                  "width": "90%",
                }
              }
              tabIndex={0}
              type="button"
            >
              <span
                className="MuiButton-label"
              >
                <div>
                  <h5
                    className="MuiTypography-root MuiTypography-h5"
                  >
                    parent
                  </h5>
                  <h6
                    className="MuiTypography-root MuiTypography-h6"
                  >
                    1
                  </h6>
                </div>
              </span>
              <span
                className="MuiTouchRipple-root"
              />
            </button>
          </div>
        </li>
      </ul>
    </div>
  </div>,
]
`;

exports[`Tests AddWords Renders correctly: node w/ even # of subdomains 1`] = `
Array [
  <div
    className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true"
  >
    <ul
      className="MuiGridList-root"
      style={
        Object {
          "margin": -0,
          "width": 350,
        }
      }
    >
      <li
        className="MuiGridListTile-root"
        style={
          Object {
            "height": 50,
            "padding": 0,
            "width": "14.285714285714286%",
          }
        }
      >
        <div
          className="MuiGridListTile-tile"
        >
          <button
            className="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary"
            disabled={false}
            id="1.0.0"
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            style={
              Object {
                "height": "90%",
                "left": 0,
                "margin": "5%",
                "top": 0,
                "width": "90%",
              }
            }
            tabIndex={0}
            type="button"
          >
            <span
              className="MuiButton-label"
            >
              <div>
                <h5
                  className="MuiTypography-root MuiTypography-h5"
                >
                  evenData
                </h5>
                <h6
                  className="MuiTypography-root MuiTypography-h6"
                >
                  1.0.0
                </h6>
              </div>
            </span>
            <span
              className="MuiTouchRipple-root"
            />
          </button>
        </div>
      </li>
      <li
        className="MuiGridListTile-root"
        style={
          Object {
            "height": 50,
            "padding": 0,
            "width": "14.285714285714286%",
          }
        }
      >
        <div
          className="MuiGridListTile-tile"
        />
      </li>
      <li
        className="MuiGridListTile-root"
        style={
          Object {
            "height": 50,
            "padding": 0,
            "width": "14.285714285714286%",
          }
        }
      >
        <div
          className="MuiGridListTile-tile"
        >
          <button
            className="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary"
            disabled={false}
            id="1.0.1"
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            style={
              Object {
                "height": "90%",
                "left": 0,
                "margin": "5%",
                "top": 0,
                "width": "90%",
              }
            }
            tabIndex={0}
            type="button"
          >
            <span
              className="MuiButton-label"
            >
              <div>
                <h5
                  className="MuiTypography-root MuiTypography-h5"
                >
                  evenData
                </h5>
                <h6
                  className="MuiTypography-root MuiTypography-h6"
                >
                  1.0.1
                </h6>
              </div>
            </span>
            <span
              className="MuiTouchRipple-root"
            />
          </button>
        </div>
      </li>
      <li
        className="MuiGridListTile-root"
        style={
          Object {
            "height": 50,
            "padding": 0,
            "width": "14.285714285714286%",
          }
        }
      >
        <div
          className="MuiGridListTile-tile"
        />
      </li>
      <li
        className="MuiGridListTile-root"
        style={
          Object {
            "height": 50,
            "padding": 0,
            "width": "14.285714285714286%",
          }
        }
      >
        <div
          className="MuiGridListTile-tile"
        >
          <button
            className="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary"
            disabled={false}
            id="1.0.2"
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            style={
              Object {
                "height": "90%",
                "left": 0,
                "margin": "5%",
                "top": 0,
                "width": "90%",
              }
            }
            tabIndex={0}
            type="button"
          >
            <span
              className="MuiButton-label"
            >
              <div>
                <h5
                  className="MuiTypography-root MuiTypography-h5"
                >
                  evenData
                </h5>
                <h6
                  className="MuiTypography-root MuiTypography-h6"
                >
                  1.0.2
                </h6>
              </div>
            </span>
            <span
              className="MuiTouchRipple-root"
            />
          </button>
        </div>
      </li>
      <li
        className="MuiGridListTile-root"
        style={
          Object {
            "height": 50,
            "padding": 0,
            "width": "14.285714285714286%",
          }
        }
      >
        <div
          className="MuiGridListTile-tile"
        />
      </li>
      <li
        className="MuiGridListTile-root"
        style={
          Object {
            "height": 50,
            "padding": 0,
            "width": "14.285714285714286%",
          }
        }
      >
        <div
          className="MuiGridListTile-tile"
        >
          <button
            className="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary"
            disabled={false}
            id="1.0.3"
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            style={
              Object {
                "height": "90%",
                "left": 0,
                "margin": "5%",
                "top": 0,
                "width": "90%",
              }
            }
            tabIndex={0}
            type="button"
          >
            <span
              className="MuiButton-label"
            >
              <div>
                <h5
                  className="MuiTypography-root MuiTypography-h5"
                >
                  evenData
                </h5>
                <h6
                  className="MuiTypography-root MuiTypography-h6"
                >
                  1.0.3
                </h6>
              </div>
            </span>
            <span
              className="MuiTouchRipple-root"
            />
          </button>
        </div>
      </li>
      <li
        className="MuiGridListTile-root"
        style={
          Object {
            "height": 50,
            "padding": 0,
            "width": "14.285714285714286%",
          }
        }
      >
        <div
          className="MuiGridListTile-tile"
        >
          <img
            alt="leftEndcap.svg"
            height="100%"
            src="leftEndcap.svg"
            width={50}
          />
        </div>
      </li>
      <li
        className="MuiGridListTile-root"
        style={
          Object {
            "height": 50,
            "padding": 0,
            "width": "14.285714285714286%",
          }
        }
      >
        <div
          className="MuiGridListTile-tile"
        >
          <img
            alt="span.svg"
            height="100%"
            src="span.svg"
            width={50}
          />
        </div>
      </li>
      <li
        className="MuiGridListTile-root"
        style={
          Object {
            "height": 50,
            "padding": 0,
            "width": "14.285714285714286%",
          }
        }
      >
        <div
          className="MuiGridListTile-tile"
        >
          <img
            alt="teeUp.svg"
            height="100%"
            src="teeUp.svg"
            width={50}
          />
        </div>
      </li>
      <li
        className="MuiGridListTile-root"
        style={
          Object {
            "height": 50,
            "padding": 0,
            "width": "14.285714285714286%",
          }
        }
      >
        <div
          className="MuiGridListTile-tile"
        >
          <img
            alt="teeDown.svg"
            height="100%"
            src="teeDown.svg"
            width={50}
          />
        </div>
      </li>
      <li
        className="MuiGridListTile-root"
        style={
          Object {
            "height": 50,
            "padding": 0,
            "width": "14.285714285714286%",
          }
        }
      >
        <div
          className="MuiGridListTile-tile"
        >
          <img
            alt="teeUp.svg"
            height="100%"
            src="teeUp.svg"
            width={50}
          />
        </div>
      </li>
      <li
        className="MuiGridListTile-root"
        style={
          Object {
            "height": 50,
            "padding": 0,
            "width": "14.285714285714286%",
          }
        }
      >
        <div
          className="MuiGridListTile-tile"
        >
          <img
            alt="span.svg"
            height="100%"
            src="span.svg"
            width={50}
          />
        </div>
      </li>
      <li
        className="MuiGridListTile-root"
        style={
          Object {
            "height": 50,
            "padding": 0,
            "width": "14.285714285714286%",
          }
        }
      >
        <div
          className="MuiGridListTile-tile"
        >
          <img
            alt="rightEndcap.svg"
            height="100%"
            src="rightEndcap.svg"
            width={50}
          />
        </div>
      </li>
    </ul>
  </div>,
  <div
    style={
      Object {
        "marginLeft": 150,
      }
    }
  >
    <div
      className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true"
      style={
        Object {
          "width": 50,
        }
      }
    >
      <button
        className="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary"
        disabled={false}
        id="1.0"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        style={
          Object {
            "height": "90%",
            "left": 0,
            "margin": "5%",
            "top": 0,
            "width": "90%",
          }
        }
        tabIndex={0}
        type="button"
      >
        <span
          className="MuiButton-label"
        >
          <div>
            <h5
              className="MuiTypography-root MuiTypography-h5"
            >
              kid
            </h5>
            <h6
              className="MuiTypography-root MuiTypography-h6"
            >
              1.0
            </h6>
          </div>
        </span>
        <span
          className="MuiTouchRipple-root"
        />
      </button>
    </div>
    <div
      className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true"
      style={
        Object {
          "width": 50,
        }
      }
    >
      <ul
        className="MuiGridList-root"
        style={
          Object {
            "margin": -2,
          }
        }
      >
        <li
          className="MuiGridListTile-root"
          style={
            Object {
              "height": 184,
              "padding": 2,
              "width": "100%",
            }
          }
        >
          <div
            className="MuiGridListTile-tile"
          >
            <img
              alt="pillar.svg"
              height="100%"
              src="pillar.svg"
              width={50}
            />
          </div>
        </li>
        <li
          className="MuiGridListTile-root"
          style={
            Object {
              "height": 184,
              "padding": 2,
              "width": "100%",
            }
          }
        >
          <div
            className="MuiGridListTile-tile"
          >
            <button
              className="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary"
              disabled={false}
              id="1"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              style={
                Object {
                  "height": "90%",
                  "left": 0,
                  "margin": "5%",
                  "top": 0,
                  "width": "90%",
                }
              }
              tabIndex={0}
              type="button"
            >
              <span
                className="MuiButton-label"
              >
                <div>
                  <h5
                    className="MuiTypography-root MuiTypography-h5"
                  >
                    parent
                  </h5>
                  <h6
                    className="MuiTypography-root MuiTypography-h6"
                  >
                    1
                  </h6>
                </div>
              </span>
              <span
                className="MuiTouchRipple-root"
              />
            </button>
          </div>
        </li>
      </ul>
    </div>
  </div>,
]
`;

exports[`Tests AddWords Renders correctly: node w/ no subdomains 1`] = `
Array [
  <div
    className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true"
  />,
  <div
    style={
      Object {
        "marginLeft": 0,
      }
    }
  >
    <div
      className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true"
      style={
        Object {
          "width": 150,
        }
      }
    >
      <button
        className="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary"
        disabled={false}
        id="1.2.1"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        style={
          Object {
            "height": "90%",
            "left": 0,
            "margin": "5%",
            "top": 0,
            "width": "90%",
          }
        }
        tabIndex={0}
        type="button"
      >
        <span
          className="MuiButton-label"
        >
          <div>
            <h5
              className="MuiTypography-root MuiTypography-h5"
            >
              oddData
            </h5>
            <h6
              className="MuiTypography-root MuiTypography-h6"
            >
              1.2.1
            </h6>
          </div>
        </span>
        <span
          className="MuiTouchRipple-root"
        />
      </button>
    </div>
    <div
      className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true"
      style={
        Object {
          "width": 150,
        }
      }
    >
      <ul
        className="MuiGridList-root"
        style={
          Object {
            "margin": -2,
          }
        }
      >
        <li
          className="MuiGridListTile-root"
          style={
            Object {
              "height": 184,
              "padding": 2,
              "width": "100%",
            }
          }
        >
          <div
            className="MuiGridListTile-tile"
          >
            <img
              alt="pillar.svg"
              height="100%"
              src="pillar.svg"
              width={150}
            />
          </div>
        </li>
        <li
          className="MuiGridListTile-root"
          style={
            Object {
              "height": 184,
              "padding": 2,
              "width": "100%",
            }
          }
        >
          <div
            className="MuiGridListTile-tile"
          >
            <button
              className="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary"
              disabled={false}
              id="1.2"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              style={
                Object {
                  "height": "90%",
                  "left": 0,
                  "margin": "5%",
                  "top": 0,
                  "width": "90%",
                }
              }
              tabIndex={0}
              type="button"
            >
              <span
                className="MuiButton-label"
              >
                <div>
                  <h5
                    className="MuiTypography-root MuiTypography-h5"
                  >
                    kid
                  </h5>
                  <h6
                    className="MuiTypography-root MuiTypography-h6"
                  >
                    1.2
                  </h6>
                </div>
              </span>
              <span
                className="MuiTouchRipple-root"
              />
            </button>
          </div>
        </li>
      </ul>
    </div>
  </div>,
]
`;

exports[`Tests AddWords Renders correctly: node w/ odd # of subdomains 1`] = `
Array [
  <div
    className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true"
  >
    <ul
      className="MuiGridList-root"
      style={
        Object {
          "margin": -0,
          "width": 250,
        }
      }
    >
      <li
        className="MuiGridListTile-root"
        style={
          Object {
            "height": 50,
            "padding": 0,
            "width": "20%",
          }
        }
      >
        <div
          className="MuiGridListTile-tile"
        >
          <button
            className="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary"
            disabled={false}
            id="1.1.0"
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            style={
              Object {
                "height": "90%",
                "left": 0,
                "margin": "5%",
                "top": 0,
                "width": "90%",
              }
            }
            tabIndex={0}
            type="button"
          >
            <span
              className="MuiButton-label"
            >
              <div>
                <h5
                  className="MuiTypography-root MuiTypography-h5"
                >
                  oddData
                </h5>
                <h6
                  className="MuiTypography-root MuiTypography-h6"
                >
                  1.1.0
                </h6>
              </div>
            </span>
            <span
              className="MuiTouchRipple-root"
            />
          </button>
        </div>
      </li>
      <li
        className="MuiGridListTile-root"
        style={
          Object {
            "height": 50,
            "padding": 0,
            "width": "20%",
          }
        }
      >
        <div
          className="MuiGridListTile-tile"
        />
      </li>
      <li
        className="MuiGridListTile-root"
        style={
          Object {
            "height": 50,
            "padding": 0,
            "width": "20%",
          }
        }
      >
        <div
          className="MuiGridListTile-tile"
        >
          <button
            className="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary"
            disabled={false}
            id="1.1.1"
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            style={
              Object {
                "height": "90%",
                "left": 0,
                "margin": "5%",
                "top": 0,
                "width": "90%",
              }
            }
            tabIndex={0}
            type="button"
          >
            <span
              className="MuiButton-label"
            >
              <div>
                <h5
                  className="MuiTypography-root MuiTypography-h5"
                >
                  oddData
                </h5>
                <h6
                  className="MuiTypography-root MuiTypography-h6"
                >
                  1.1.1
                </h6>
              </div>
            </span>
            <span
              className="MuiTouchRipple-root"
            />
          </button>
        </div>
      </li>
      <li
        className="MuiGridListTile-root"
        style={
          Object {
            "height": 50,
            "padding": 0,
            "width": "20%",
          }
        }
      >
        <div
          className="MuiGridListTile-tile"
        />
      </li>
      <li
        className="MuiGridListTile-root"
        style={
          Object {
            "height": 50,
            "padding": 0,
            "width": "20%",
          }
        }
      >
        <div
          className="MuiGridListTile-tile"
        >
          <button
            className="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary"
            disabled={false}
            id="1.1.2"
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            style={
              Object {
                "height": "90%",
                "left": 0,
                "margin": "5%",
                "top": 0,
                "width": "90%",
              }
            }
            tabIndex={0}
            type="button"
          >
            <span
              className="MuiButton-label"
            >
              <div>
                <h5
                  className="MuiTypography-root MuiTypography-h5"
                >
                  oddData
                </h5>
                <h6
                  className="MuiTypography-root MuiTypography-h6"
                >
                  1.1.2
                </h6>
              </div>
            </span>
            <span
              className="MuiTouchRipple-root"
            />
          </button>
        </div>
      </li>
      <li
        className="MuiGridListTile-root"
        style={
          Object {
            "height": 50,
            "padding": 0,
            "width": "20%",
          }
        }
      >
        <div
          className="MuiGridListTile-tile"
        >
          <img
            alt="leftEndcap.svg"
            height="100%"
            src="leftEndcap.svg"
            width={50}
          />
        </div>
      </li>
      <li
        className="MuiGridListTile-root"
        style={
          Object {
            "height": 50,
            "padding": 0,
            "width": "20%",
          }
        }
      >
        <div
          className="MuiGridListTile-tile"
        >
          <img
            alt="span.svg"
            height="100%"
            src="span.svg"
            width={50}
          />
        </div>
      </li>
      <li
        className="MuiGridListTile-root"
        style={
          Object {
            "height": 50,
            "padding": 0,
            "width": "20%",
          }
        }
      >
        <div
          className="MuiGridListTile-tile"
        >
          <img
            alt="intersect.svg"
            height="100%"
            src="intersect.svg"
            width={50}
          />
        </div>
      </li>
      <li
        className="MuiGridListTile-root"
        style={
          Object {
            "height": 50,
            "padding": 0,
            "width": "20%",
          }
        }
      >
        <div
          className="MuiGridListTile-tile"
        >
          <img
            alt="span.svg"
            height="100%"
            src="span.svg"
            width={50}
          />
        </div>
      </li>
      <li
        className="MuiGridListTile-root"
        style={
          Object {
            "height": 50,
            "padding": 0,
            "width": "20%",
          }
        }
      >
        <div
          className="MuiGridListTile-tile"
        >
          <img
            alt="rightEndcap.svg"
            height="100%"
            src="rightEndcap.svg"
            width={50}
          />
        </div>
      </li>
    </ul>
  </div>,
  <div
    style={
      Object {
        "marginLeft": 100,
      }
    }
  >
    <div
      className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true"
      style={
        Object {
          "width": 50,
        }
      }
    >
      <button
        className="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary"
        disabled={false}
        id="1.1"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        style={
          Object {
            "height": "90%",
            "left": 0,
            "margin": "5%",
            "top": 0,
            "width": "90%",
          }
        }
        tabIndex={0}
        type="button"
      >
        <span
          className="MuiButton-label"
        >
          <div>
            <h5
              className="MuiTypography-root MuiTypography-h5"
            >
              kid
            </h5>
            <h6
              className="MuiTypography-root MuiTypography-h6"
            >
              1.1
            </h6>
          </div>
        </span>
        <span
          className="MuiTouchRipple-root"
        />
      </button>
    </div>
    <div
      className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true"
      style={
        Object {
          "width": 50,
        }
      }
    >
      <ul
        className="MuiGridList-root"
        style={
          Object {
            "margin": -2,
          }
        }
      >
        <li
          className="MuiGridListTile-root"
          style={
            Object {
              "height": 184,
              "padding": 2,
              "width": "100%",
            }
          }
        >
          <div
            className="MuiGridListTile-tile"
          >
            <img
              alt="pillar.svg"
              height="100%"
              src="pillar.svg"
              width={50}
            />
          </div>
        </li>
        <li
          className="MuiGridListTile-root"
          style={
            Object {
              "height": 184,
              "padding": 2,
              "width": "100%",
            }
          }
        >
          <div
            className="MuiGridListTile-tile"
          >
            <button
              className="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary"
              disabled={false}
              id="1"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              style={
                Object {
                  "height": "90%",
                  "left": 0,
                  "margin": "5%",
                  "top": 0,
                  "width": "90%",
                }
              }
              tabIndex={0}
              type="button"
            >
              <span
                className="MuiButton-label"
              >
                <div>
                  <h5
                    className="MuiTypography-root MuiTypography-h5"
                  >
                    parent
                  </h5>
                  <h6
                    className="MuiTypography-root MuiTypography-h6"
                  >
                    1
                  </h6>
                </div>
              </span>
              <span
                className="MuiTouchRipple-root"
              />
            </button>
          </div>
        </li>
      </ul>
    </div>
  </div>,
]
`;
